--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "dev-only": "nuxt --port 4000",
     "precompile-svgs": "node utils/precompileSvgs/index.js && yarn run pregenerate",
     "precompile-custom-svgs": "node utils/precompileSvgs/index.js --custom && yarn run pregenerate",
-    "test": "jest --config=jest.conf/index.js",
+    "_lint-watch-fix": "yarn lint -w -m",
+    "test": "yarn test:unit && yarn test:visual",
+    "test:unit": "jest --config=jest.conf/index.js",
+    "test:visual": "JEST_PUPPETEER_CONFIG=./jest-puppeteer.config.js node startVisualTests.js",
     "_api-watch": "chokidar \"**/lib/**\" -c \"node utils/extractApi.js\""
   },
   "files": [
@@ -34,11 +37,12 @@
     "fuzzysearch": "1.0.3",
     "lodash": "4.17.21",
     "popper.js": "1.16.1",
+    "ps-tree": "^1.2.0",
+    "puppeteer": "^22.11.0",
     "purecss": "2.2.0",
     "tippy.js": "4.3.5",
     "vue": "2",
     "vue-intl": "3.1.0",
-    "vue2-teleport": "1.1.4",
     "xstate": "4.38.3"
   },
   "peerDependencies": {},
