--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lib"
   ],
   "dependencies": {
+    "@vue/composition-api": "1.7.2",
     "aphrodite": "https://github.com/learningequality/aphrodite/",
     "autosize": "3.0.21",
     "color": "3.2.1",
@@ -37,8 +38,6 @@
     "fuzzysearch": "1.0.3",
     "lodash": "4.17.21",
     "popper.js": "1.16.1",
-    "ps-tree": "^1.2.0",
-    "puppeteer": "^22.11.0",
     "purecss": "2.2.0",
     "tippy.js": "4.3.5",
     "vue": "2",
@@ -52,6 +51,8 @@
     "@mdi/svg": "^5.9.55",
     "@testing-library/jest-dom": "6.6.3",
     "@vue/test-utils": "1.3.6",
+    "@percy/cli": "^1.28.7",
+    "@percy/puppeteer": "^2.0.2",
     "@vuedoc/parser": "^3.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
@@ -63,6 +64,7 @@
     "globby": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-puppeteer": "^10.0.1",
     "jest-serializer-vue": "^3.1.0",
     "kolibri-format": "^1.0.0",
     "lockr": "^0.8.4",
@@ -72,6 +74,8 @@
     "normalize.css": "^8.0.1",
     "nuxt": "2.18.1",
     "prismjs": "^1.27.0",
+    "ps-tree": "^1.2.0",
+    "puppeteer": "^22.11.0",
     "raw-loader": "0.5.1",
     "sass-loader": "^10.5.2",
     "svg-icon-inline-loader": "^3.1.0",
