Add puppeteer config for CI environments

--- a/.github/workflows/visual_tests.yml
+++ b/.github/workflows/visual_tests.yml
@@ -24,6 +24,8 @@ jobs:
     environment: percy_tests
     outputs:
       percy_url: ${{ steps.extract-url.outputs.percy_url }}
+    env:
+      CI: true
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
@@ -41,6 +43,8 @@ jobs:
         run: |
           yarn --frozen-lockfile
           npm rebuild node-sass
+      - name: Download Chromium
+        run: npx puppeteer browsers install chrome
       - name: Extract jsdocs and environment info 
         run: yarn pregenerate
       - name: Run visual tests
