add the packages

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@babel/core": "^7.26.0",
     "@material-icons/svg": "git+https://github.com/material-icons/material-icons.git",
     "@mdi/svg": "^5.9.55",
-    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/vue": "5",
     "@vue/test-utils": "1.3.6",
     "@vuedoc/parser": "^3.4.0",
     "babel-core": "7.0.0-bridge.0",
@@ -64,11 +65,11 @@
     "lockr": "^0.8.4",
     "material-design-icons": "^3.0.1",
     "mock-match-media": "^0.4.3",
-    "node-sass": "^9.0.0",
     "normalize.css": "^8.0.1",
     "nuxt": "2.18.1",
     "prismjs": "^1.27.0",
     "raw-loader": "0.5.1",
+    "sass": "^1.83.4",
     "sass-loader": "^10.5.2",
     "svg-icon-inline-loader": "^3.1.0",
     "svgo": "^1.3.2",
