--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@material-icons/svg": "git+https://github.com/material-icons/material-icons.git",
     "@mdi/svg": "^5.9.55",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.0",
     "@testing-library/vue": "5",
     "@vue/test-utils": "1.3.6",
     "@vuedoc/parser": "^3.4.0",
@@ -57,6 +58,7 @@
     "concurrently": "^9.1.0",
     "consola": "^2.15.3",
     "eslint-import-resolver-nuxt": "^1.0.1",
+    "eslint-plugin-jest-dom": "^5.5.0",
     "globby": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
