--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tippy.js": "4.3.5",
     "vue": "2",
     "vue-intl": "3.1.0",
+    "vue2-teleport": "1.1.4",
     "xstate": "4.38.3"
   },
   "peerDependencies": {},
@@ -49,10 +50,10 @@
     "@babel/core": "^7.26.0",
     "@material-icons/svg": "git+https://github.com/material-icons/material-icons.git",
     "@mdi/svg": "^5.9.55",
-    "@testing-library/jest-dom": "6.6.3",
-    "@vue/test-utils": "1.3.6",
     "@percy/cli": "^1.28.7",
     "@percy/puppeteer": "^2.0.2",
+    "@testing-library/jest-dom": "6.6.3",
+    "@vue/test-utils": "1.3.6",
     "@vuedoc/parser": "^3.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
