--- a/package.json
+++ b/package.json
@@ -90,5 +90,9 @@
   },
   "browserslist": [
     "extends browserslist-config-kolibri"
-  ]
+  ],
+  "volta": {
+    "node": "18.20.6",
+    "yarn": "1.22.22"
+  }
 }
