--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "nuxt": "2.18.1",
     "prismjs": "^1.27.0",
     "puppeteer": "^22.11.0",
-    "raw-loader": "0.5.1",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^10.5.2",
     "svg-icon-inline-loader": "^3.1.0",
     "svgo": "^1.3.2",
@@ -90,5 +90,9 @@
   },
   "browserslist": [
     "extends browserslist-config-kolibri"
-  ]
+  ],
+  "volta": {
+    "node": "18.20.6",
+    "yarn": "1.22.22"
+  }
 }
