--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@percy/cli": "^1.28.7",
     "@percy/puppeteer": "^2.0.2",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.6.0",
-    "@testing-library/vue": "5",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "1.3.6",
     "@vuedoc/parser": "^3.4.0",
     "babel-core": "7.0.0-bridge.0",
