--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lib"
   ],
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "aphrodite": "https://github.com/learningequality/aphrodite/",
     "autosize": "3.0.21",
     "color": "4.2.3",
